try to fix image bug in deployed site- img not showing up

--- a/src/styles/components/_projectCards.scss
+++ b/src/styles/components/_projectCards.scss
@@ -9,16 +9,24 @@
   justify-content: space-evenly;
 }
 
+.project-img {
+  // width: 100%;
+  height: 100%;
+
+}
+
 .project-card-container {
   display: flex;
+  // width: 85%;
   width: 85%;
+  height: 500px;
   justify-content: space-around;
   // justify-content: center;
   // background-size: cover;
   // background-position: center;
   // 556 x 313
-  width: 375px;
-  height: 215px;
+  // width: 375px;
+  // height: 215px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -57,7 +65,7 @@
 }
 
 .project-card:hover:before {
-  background: #203544d7;
+  background: $accent-color;
   opacity: 1;
 }
 
@@ -92,7 +100,7 @@
 }
 
 .project-btn {
-  background-color: #203544d7;
+  // background-color: #203544d7;
   border: 0.5px solid white;
   color: white;
   padding: 7px 10px;
